...
        app:layout_constraintStart_toStartOf="@+id/username" />

    <TextView
        android:id="@+id/invisible_pp_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="deneme"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
